[project]
name = "gh-follower-changes"
version = "1.0.0"
description = "GitHub Followers Tracker - Track GitHub followers and maintain a changelog of changes"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ghapi>=1.0.9",
    "fastcore==1.8.16",
    "mdformat>=1.0.0",
]

[project.scripts]
track-followers = "track_followers:main"
