[project]
name = "gh-follower-changes"
version = "1.0.0"
description = "GitHub Followers Tracker - Track GitHub followers and maintain a changelog of changes"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ghapi>=1.0.9",
    "fastcore==1.8.16",
    "mdformat>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
track-followers = "track_followers:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=track_followers.py --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["track_followers.py"]
omit = ["tests/*", "test_*.py", ".venv/*", "venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
